syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zup.edu";
option java_outer_classname = "CasaDoCodigo";
option objc_class_prefix = "HLW";

package com.zup.edu;

service CadastroAutorService {
  rpc cadatro(CadastroAutorRequest) returns (CadastroAutorResponse) {}
}

message CadastroAutorRequest {
  string nome = 1;
  string email = 2;
  string descricao = 3;
}

message CadastroAutorResponse {
  string nome = 1;
  string email = 2;
  string descricao = 3;
}